igt@gem_exec_balancer@bonded-slice - Failed assertion: !"GPU hung"
@l4kshmi
Submitted by LAKSHMINARAYANA VUDUM Assigned to Intel GFX Bugs mailing list
Link to original bug (#111857)
Description
https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_379/fi-icl-dsi/igt@gem_exec_balancer@bonded-slice.html
Starting subtest: bonded-slice
(gem_exec_balancer:1156) igt_aux-CRITICAL: Test assertion failure function sig_abort, file ../lib/igt_aux.c:502:
(gem_exec_balancer:1156) igt_aux-CRITICAL: Failed assertion: !"GPU hung"
Subtest bonded-slice failed.
https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_380/fi-bdw-gvtdvm/igt@gem_exec_balancer@bonded-slice.html
Starting subtest: bonded-slice
(gem_exec_balancer:1075) igt_aux-CRITICAL: Test assertion failure function sig_abort, file ../lib/igt_aux.c:502:
(gem_exec_balancer:1075) igt_aux-CRITICAL: Failed assertion: !"GPU hung"
Subtest bonded-slice failed.